--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,14 +10,11 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- task: UseRubyVersion@0
-  inputs:
-    versionSpec: '>= 2.5'
+- script: |
+    docker -v
+    docker-compose -v
+  displayName: 'prepare'
 
 - script: |
-    gem install bundler
-    bundle install --retry=3 --jobs=4
-  displayName: 'bundle install'
-
-- script: bundle exec rake
-  displayName: 'bundle exec rake'
+    docker-compose build
+  displayName: 'docker-compose build'
