--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,3 +22,12 @@ steps:
 - script: |
     docker-compose up -d
   displayName: 'docker-compose up'
+
+- script: |
+    docker-compose run web bundle exec rails db:create
+    docker-compose run web bundle exec rails db:migrate
+  displayName: 'create database and tables'
+
+- script: |
+    docker-compose run web bundle exec rails spec
+  displayName: 'exec rspec'
