--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,3 +37,9 @@ steps:
   inputs:
     testResultsFiles: 'rspec.xml'
     testRunTitle: 'Ruby tests'
+
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: Cobertura
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
+    reportDirectory: '$(System.DefaultWorkingDirectory)/**/coverage'
