--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -8,9 +8,9 @@
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle.
 # SupportedStyles: normal, rails
-Layout/IndentationConsistency:
-  Exclude:
-    - 'app/controllers/posts_controller.rb'
+#Layout/IndentationConsistency:
+#  Exclude:
+#    - 'app/controllers/posts_controller.rb'
 
 # Offense count: 2
 # Cop supports --auto-correct.
