--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -36,17 +36,7 @@ Style/EmptyMethod:
 # Configuration parameters: EnforcedStyle.
 # SupportedStyles: always, never
 Style/FrozenStringLiteralComment:
-  Exclude:
-    - 'app/channels/application_cable/channel.rb'
-    - 'app/channels/application_cable/connection.rb'
-    - 'app/controllers/application_controller.rb'
-    - 'app/controllers/posts_controller.rb'
-    - 'app/helpers/application_helper.rb'
-    - 'app/helpers/posts_helper.rb'
-    - 'app/jobs/application_job.rb'
-    - 'app/mailers/application_mailer.rb'
-    - 'app/models/application_record.rb'
-    - 'app/models/post.rb'
+  Enabled: false
 
 # Offense count: 1
 # Cop supports --auto-correct.
