--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,10 @@ steps:
   displayName: 'docker-compose up'
 
 - script: |
+    docker-compose run web yarn install
+  displayName: 'yarn install'
+
+- script: |
     docker-compose run web bundle exec rails db:create
     docker-compose run web bundle exec rails db:migrate
   displayName: 'create database and tables'
