--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -6,14 +6,8 @@
 # Note that changes in the inspected code, or installation of new
 # versions of RuboCop, may require this file to be generated again.
 
-# Offense count: 2
-# Cop supports --auto-correct.
-# Configuration parameters: EnforcedStyle.
-# SupportedStyles: around, only_before
 Layout/EmptyLinesAroundAccessModifier:
-  Exclude:
-    - 'app/controllers/application_controller.rb'
-    - 'app/controllers/users_controller.rb'
+  EnforcedStyle: only_before
 
 # Offense count: 2
 # Cop supports --auto-correct.
