--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -13,9 +13,9 @@ Layout/EmptyLinesAroundAccessModifier:
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle.
 # SupportedStyles: normal, rails
-Layout/IndentationConsistency:
-  Exclude:
-    - 'app/controllers/users_controller.rb'
+#Layout/IndentationConsistency:
+#  Exclude:
+#    - 'app/controllers/users_controller.rb'
 
 # Offense count: 2
 # Cop supports --auto-correct.
