--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -49,9 +49,6 @@ Style/StringLiterals:
 Style/SymbolArray:
   EnforcedStyle: brackets
 
-# Offense count: 3
-# Cop supports --auto-correct.
-# Configuration parameters: AutoCorrect, AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
-# URISchemes: http, https
+# 1行の文字数は取り急ぎ100文字で
 Metrics/LineLength:
   Max: 100
