--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -13,6 +13,8 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6.x
+    - name: Install dependent libralies
+      run: sudo apt-get install libpq-dev
     - name: Build and test with Rake
       run: |
         gem install bundler
