--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -29,4 +29,6 @@ jobs:
       run: |
         gem install bundler
         bundle install --jobs 4 --retry 3
+        bundle exec rails db:create RAILS_ENV=test
+        bundle exec rails db:migrate RAILS_ENV=test
         bundle exec rspec
