--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -31,4 +31,5 @@ jobs:
         bundle install --jobs 4 --retry 3
         bundle exec rails db:create RAILS_ENV=test
         bundle exec rails db:migrate RAILS_ENV=test
+        bundle exec rails webpack:compile
         bundle exec rspec
