--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,8 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails db:migrate && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myapp
+      - bundle:/usr/local/bundle
     ports:
       - "3000:3000"
+volumes:
+  bundle:
