--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,10 @@ steps:
     versionSpec: '= 2.6'
 
 - script: |
+    sudo apt-get install libsqlite3-dev
+  displayName: 'install middleware'
+
+- script: |
     gem install bundler
     bundle install --retry=3 --jobs=4
   displayName: 'bundle install'
