add yarn install

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,3 +22,7 @@ steps:
     gem install bundler
     bundle install --retry=3 --jobs=4
   displayName: 'bundle install'
+
+- script: |
+    yarn install
+  displayName: 'yarn install'
