--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,24 @@
 version: '3'
 services:
+  db:
+    image: postgres:11.7
+    ports:
+      - "3306:3306"
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: 'rails_app'
+      POSTGRES_PASSWORD: 'rails_app'
   web:
     build: .
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myapp
       - bundle:/usr/local/bundle
     ports:
       - "3000:3000"
+    depends_on:
+      - db
 volumes:
   bundle:
+  db_data:
