create database config file for CI/CD.

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -43,5 +43,7 @@ jobs:
         ruby-version: 2.6
     - name: Install dependencies
       run: bundle install
+    - name: change database config file
+      run: cp -p config/database.yml.ci config/database.yml
     - name: Run tests
       run: bundle exec rake
