--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -47,3 +47,5 @@ jobs:
       run: cp -p config/database.yml.ci config/database.yml
     - name: Run tests
       run: bundle exec rake
+      env:
+        POSTGRES_HOST: localhost
