--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -47,6 +47,10 @@ jobs:
       run: bundle install
     - name: change database config file
       run: cp -p config/database.yml.ci config/database.yml
+    - name: create database
+      run: bin/rails db:create
+    - name: create tables
+      run: bin/rails db:migrate
     - name: Run tests
       run: bundle exec rake
       env:
