--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,6 +16,7 @@ on:
 env:
   RAILS_ENV: test
   POSTGRES_HOST: localhost
+  REDIS_URL: 'redis://redis:6379/1'
 
 jobs:
   test:
@@ -37,7 +38,10 @@ jobs:
           --health-retries 5
         ports:
           - 5432:5432
-
+      redis:
+        image: redis:6.0-alpine
+        ports:
+          - 6379:6379
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
