--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,19 @@
 version: '3'
 services:
+  web: &app_base
+    build: .
+    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
+    volumes:
+      - .:/myapp
+      - bundle:/usr/local/bundle
+    ports:
+      - "3000:3000"
+    environment:
+      REDIS_URL: 'redis://redis:6379/0'
+      WEBPACKER_DEV_SERVER_HOST: webpacker
+    depends_on:
+      - db
+      - redis
   redis:
     image: redis:6.0-alpine
     ports:
@@ -16,19 +30,11 @@ services:
     environment:
       POSTGRES_USER: 'rails_app'
       POSTGRES_PASSWORD: 'rails_app'
-  web:
-    build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
-    volumes:
-      - .:/myapp
-      - bundle:/usr/local/bundle
+  webpacker:
+    <<: *app_base
     ports:
-      - "3000:3000"
-    environment:
-      REDIS_URL: 'redis://redis:6379/0'
-    depends_on:
-      - db
-      - redis
+      - "3305:3305"
+    command: bin/webpack-dev-server
 volumes:
   bundle:
   db_data:
