--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       RAILS_ENV: $DOCKER_RAILS_ENV
       REDIS_URL: $REDIS_URL
       WEBPACKER_DEV_SERVER_HOST: $WEBPACKER_DEV_SERVER_HOST
+      DB_USER: $DB_USER
+      DB_PASSWORD: $DB_PASSWORD
     depends_on:
       - db
       - redis
