--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       WEBPACKER_DEV_SERVER_HOST: $WEBPACKER_DEV_SERVER_HOST
       DB_USER: $DB_USER
       DB_PASSWORD: $DB_PASSWORD
+      DB_HOST: $DB_HOST
     depends_on:
       - db
       - redis
