--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -15,7 +15,9 @@ on:
 
 env:
   RAILS_ENV: test
-  POSTGRES_HOST: localhost
+  DB_HOST: localhost
+  DB_USER: rails_app
+  DB_PASSWORD: rails_app
   REDIS_URL: 'redis://localhost:6379/1'
 
 jobs:
@@ -29,8 +31,8 @@ jobs:
       postgres:
         image: postgres:11.7
         env:
-          POSTGRES_USER: 'rails_app'
-          POSTGRES_PASSWORD: 'rails_app'
+          POSTGRES_USER: ${DB_USER}
+          POSTGRES_PASSWORD: ${DB_PASSWORD}
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -68,8 +70,8 @@ jobs:
         bundle install --jobs 4
     - name: yarn install
       run: bin/rails yarn:install
-    - name: change database config file
-      run: cp -p config/database.yml.ci config/database.yml
+    #- name: change database config file
+    #  run: cp -p config/database.yml.ci config/database.yml
     - name: create database
       run: bin/rails db:create
     - name: create tables
