--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -16,8 +16,8 @@ on:
 env:
   RAILS_ENV: test
   DB_HOST: localhost
-  DB_USER: 'rails_app'
-  DB_PASSWORD: 'rails_app'
+  DB_USER: rails_app
+  DB_PASSWORD: rails_app
   REDIS_URL: 'redis://localhost:6379/1'
 
 jobs:
@@ -31,8 +31,8 @@ jobs:
       postgres:
         image: postgres:11.7
         env:
-          POSTGRES_USER: ${DB_USER}
-          POSTGRES_PASSWORD: ${DB_PASSWORD}
+          POSTGRES_USER: 'rails_app'
+          POSTGRES_PASSWORD: 'rails_app'
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
