--- a/Dockerfile_production
+++ b/Dockerfile_production
@@ -23,7 +23,7 @@ RUN mkdir /myapp
 WORKDIR /myapp
 COPY Gemfile /myapp/Gemfile
 COPY Gemfile.lock /myapp/Gemfile.lock
-RUN bundle install
+RUN bundle install -j 4 --without test development
 COPY . /myapp
 
 RUN yarn install
