--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,4 +37,5 @@ steps:
 
 - script: |
     sudo apt-get install redis-tools
-    redis-cli -h redis ping
+    redis-cli -h localhost ping
+  displayName: 'redis cli check'
