--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,11 +13,21 @@ services:
       - 6379:6379
   postgresql:
     image: postgres:11.7
+    env:
+      POSTGRES_USER: rails_user
+      POSTGRES_PASSWORD: rails_user
     ports:
       - 3306:3306
 
 pool:
   vmImage: 'ubuntu-latest'
+
+variables:
+  RAILS_ENV: test
+  DB_HOST: localhost
+  DB_USER: rails_app
+  DB_PASSWORD: rails_app
+  REDIS_URL: 'redis://localhost:6379/1'
 
 steps:
 - task: UseRubyVersion@0
@@ -35,7 +45,5 @@ steps:
 - script: yarn install
   displayName: 'yarn install'
 
-- script: |
-    sudo apt-get install redis-tools
-    redis-cli -h localhost ping
-  displayName: 'redis cli check'
+- script: bin/rails db:create
+  displayName: 'db create'
