publish code coverage to Azure DevOps.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,3 +57,8 @@ steps:
 
 - script: bin/rails test
   displayName: 'run tests'
+
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: 'Cobertura'
+    summaryFileLocation: 'coverage/coverage.xml'
