add succeededOrFailed condition.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,10 +59,10 @@ steps:
   displayName: 'run tests'
 
 - task: PublishTestResults@2
+  condition: succeededOrFailed()
   inputs:
     testResultsFormat: 'JUnit'
     testResultsFiles: 'test/reports/TEST-*.xml'
-    failTaskOnFailedTests: true
 
 - task: PublishCodeCoverageResults@1
   inputs:
