一旦dev/prodにDockerfileを分けるのをやめ。
ちょっと自分でも何がしたいのかよく分からなくなってきたので整理します。

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   web: &app_base
     build:
       context: .
-      dockerfile: Dockerfile_${DOCKER_RAILS_ENV}
-    image: rails_for_azure_webapps_${DOCKER_RAILS_ENV}
+      dockerfile: Dockerfile
+    image: railsapp
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myapp
