--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ services:
     image: redis:6.0.8-alpine
     ports:
       - 6379:6379
+    command: redis-server --requirepass hogehoge
   postgresql:
     image: postgres:11.9-alpine
     env:
@@ -27,7 +28,10 @@ variables:
   DB_HOST: localhost
   DB_USER: rails_app
   DB_PASSWORD: rails_app
-  REDIS_URL: 'redis://localhost:6379/1'
+  REDIS_HOST: localhost
+  REDIS_PORT: 6379
+  REDIS_DB: 1
+  REDIS_PASSWORD: hogehoge
 
 steps:
 - task: Cache@2
