--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,6 @@ services:
     image: redis:6.0.8-alpine
     ports:
       - 6379:6379
-    command: redis-server --requirepass hogehoge
   postgresql:
     image: postgres:11.9-alpine
     env:
@@ -31,7 +30,7 @@ variables:
   REDIS_HOST: localhost
   REDIS_PORT: 6379
   REDIS_DB: 1
-  REDIS_PASSWORD: hogehoge
+  REDIS_PASSWORD:
 
 steps:
 - task: Cache@2
