--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/myapp
-      # - bundle:/usr/local/bundle
-      # - node_modules:/myapp/node_modules
+      - bundle:/usr/local/bundle
+      - node_modules:/myapp/node_modules
     ports:
       - "3000:3000"
     environment:
@@ -34,6 +34,6 @@ services:
   #     - "3305:3305"
   #   command: bin/webpack-dev-server
 volumes:
-#  bundle:
+  bundle:
   db_data:
-#   node_modules:
+  node_modules:
