--- a/test/fixtures/todos.yml
+++ b/test/fixtures/todos.yml
@@ -1,9 +1,3 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  title: MyString
-  body: MyText
-
-two:
-  title: MyString
-  body: MyText
+valid:
+  title: test title
+  body: test body
