--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -236,7 +236,7 @@ Style/StderrPuts:
 # Configuration parameters: EnforcedStyle, ConsistentQuotesInMultiline.
 # SupportedStyles: single_quotes, double_quotes
 Style/StringLiterals:
-  Enabled: false
+  EnforcedStyle: double_quotes
 
 # Offense count: 3
 # Cop supports --auto-correct.
