--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -231,10 +231,8 @@ Style/StderrPuts:
   Exclude:
     - 'bin/yarn'
 
-# Offense count: 146
-# Cop supports --auto-correct.
-# Configuration parameters: EnforcedStyle, ConsistentQuotesInMultiline.
-# SupportedStyles: single_quotes, double_quotes
+# Railsで生成するファイルたちが二重引用符を使っていることが
+# 多かったので、double_quotesに設定した
 Style/StringLiterals:
   EnforcedStyle: double_quotes
 
