--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -16,13 +16,9 @@ Layout/EmptyLinesAroundBlockBody:
   Exclude:
     - 'db/schema.rb'
 
-# Offense count: 2
-# Cop supports --auto-correct.
-# Configuration parameters: EnforcedStyle.
-# SupportedStyles: normal, indented_internal_methods
+# Railsが生成するものに合わせてprivateの後はインデントする
 Layout/IndentationConsistency:
-  Exclude:
-    - 'app/controllers/todos_controller.rb'
+  EnforcedStyle: indented_internal_methods
 
 # Offense count: 2
 # Cop supports --auto-correct.
