--- a/Dockerfile.prd.azure
+++ b/Dockerfile.prd.azure
@@ -16,6 +16,11 @@ RUN ln -s /opt/yarn/bin/yarn /usr/local/bin/yarn \
 
 WORKDIR /app
 
+# setup SSH deamon for Azure Web Apps
+# see. https://docs.microsoft.com/ja-jp/azure/app-service/configure-custom-container?pivots=container-linux#enable-ssh
+RUN apt-get update && apt-get install -y openssh-server
+RUN echo "root:Docker!" | chpasswd
+
 COPY Gemfile /app/Gemfile
 COPY Gemfile.lock /app/Gemfile.lock
 # developmentとtestのgemはインストールしない
@@ -29,6 +34,6 @@ RUN RAILS_ENV=production bin/rails assets:precompile
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
 ENTRYPOINT ["entrypoint.sh"]
-EXPOSE 3000
+EXPOSE 3000 2222
 
 CMD [ "rails", "server", "-b", "0.0.0.0" ]
