--- a/Dockerfile.prd.azure
+++ b/Dockerfile.prd.azure
@@ -34,6 +34,8 @@ RUN RAILS_ENV=production bin/rails assets:precompile
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
 ENTRYPOINT ["entrypoint.sh"]
+# setup SSH deamon for Azure Web Apps
+# see. https://docs.microsoft.com/ja-jp/azure/app-service/configure-custom-container?pivots=container-linux#enable-ssh
 EXPOSE 3000 2222
 
 CMD [ "rails", "server", "-b", "0.0.0.0" ]
