--- a/Dockerfile.prd
+++ b/Dockerfile.prd
@@ -1,5 +1,5 @@
 FROM node:14.17.0-slim as node
-FROM ruby:3.0.2
+FROM ruby:3.0.2-slim
 
 # NodeとYarnのインストール
 ENV YARN_VERSION 1.22.5
@@ -14,6 +14,8 @@ RUN ln -s /opt/yarn/bin/yarn /usr/local/bin/yarn \
   && ln -s /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npm \
   && ln -s /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npx
 
+RUN apt-get update && apt-get install -y build-essential libsqlite3-dev
+
 WORKDIR /app
 
 COPY Gemfile /app/Gemfile
@@ -25,6 +27,8 @@ COPY . /app
 
 RUN yarn install
 RUN RAILS_ENV=production bin/rails assets:precompile
+
+ENV RAILS_ENV=production
 
 COPY entrypoint.sh /usr/bin/
 RUN chmod +x /usr/bin/entrypoint.sh
