--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.0",
+    "@rails/webpacker": "^5.4.0",
     "bootstrap": "^5.0.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
