--- a/Dockerfile.prd
+++ b/Dockerfile.prd
@@ -14,7 +14,7 @@ RUN ln -s /opt/yarn/bin/yarn /usr/local/bin/yarn \
   && ln -s /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npm \
   && ln -s /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npx
 
-RUN apt-get update && apt-get install -y build-essential libsqlite3-dev
+RUN apt-get update && apt-get install -y build-essential libpq-dev
 
 WORKDIR /app
 
