--- a/Dockerfile.prd.azure
+++ b/Dockerfile.prd.azure
@@ -1,5 +1,5 @@
 FROM node:16.13.2-slim as node
-FROM ruby:3.0.3
+FROM ruby:3.0.3-slim
 
 # NodeとYarnのインストール
 ENV YARN_VERSION 1.22.15
@@ -18,7 +18,7 @@ WORKDIR /app
 
 # setup SSH deamon for Azure Web Apps
 # see. https://docs.microsoft.com/ja-jp/azure/app-service/configure-custom-container?pivots=container-linux#enable-ssh
-RUN apt-get update && apt-get install -y openssh-server
+RUN apt-get update && apt-get install -y openssh-server build-essential libpq-dev
 RUN echo "root:Docker!" | chpasswd
 
 COPY sshd_config /etc/ssh/
