--- a/Dockerfile.prd
+++ b/Dockerfile.prd
@@ -21,6 +21,7 @@ WORKDIR /app
 COPY Gemfile /app/Gemfile
 COPY Gemfile.lock /app/Gemfile.lock
 # developmentとtestのgemはインストールしない
+RUN bundle config set --local without 'development test'
 RUN bundle config set --local deployment 'true'
 RUN bundle install
 COPY . /app
