--- a/Dockerfile.prd.azure
+++ b/Dockerfile.prd.azure
@@ -26,7 +26,10 @@ COPY sshd_config /etc/ssh/
 COPY Gemfile /app/Gemfile
 COPY Gemfile.lock /app/Gemfile.lock
 # developmentとtestのgemはインストールしない
-# RUN bundle config set --local without 'development test'
+RUN bundle config set --local without 'development test'
+# CIやデプロイ用の設定
+# see. https://bundler.io/man/bundle-install.1.html#DEPLOYMENT-MODE
+RUN bundle config set --local deployment 'true'
 RUN bundle install
 COPY . /app
 
