--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   },
   "scripts": {
     "build": "webpack --config webpack.config.js"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1"
   }
 }
