--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "format": "prettier --write 'app/javascript/**/*.js'"
   },
   "devDependencies": {
-    "prettier": "^2.7.1"
+    "eslint-config-google": "^0.14.0",
+    "prettier": "^2.7.1",
+    "prettier-eslint": "^15.0.1",
+    "prettier-eslint-cli": "^7.1.0"
   }
 }
