--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -36,6 +36,9 @@ jobs:
       # Add or replace database setup steps here
       - name: Set up database schema
         run: bin/rails db:schema:load
+      # Build JavaScript
+      - name: Build JavaScript
+        run: npm run build
       # Add or replace test runners here
       - name: Run tests
         run: bin/rake
