--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -33,6 +33,9 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+      # Setup nodejs
+      - name: Setup nodejs
+        run: npm ci
       # Add or replace database setup steps here
       - name: Set up database schema
         run: bin/rails db:schema:load
