--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - node_modules:/app/node_modules
     environment:
       BUNDLE_PATH: "/app/vendor/bundle"
-    command: ["bin/rails", "server", "-b", "0.0.0.0"]
+    command: ["bin/dev"]
     expose: ["3000"]
     ports: ["3000:3000"]
     working_dir: /app
