--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "format": "prettier-eslint --write 'app/javascript/**/*.js'"
   },
   "devDependencies": {
+    "css-loader": "^6.7.3",
     "eslint-config-google": "^0.14.0",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
-    "prettier-eslint-cli": "^7.1.0"
+    "prettier-eslint-cli": "^7.1.0",
+    "style-loader": "^3.3.1"
   }
 }
