--- a/package.json
+++ b/package.json
@@ -14,11 +14,17 @@
     "format": "prettier-eslint --write 'app/javascript/**/*.js'"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "css-loader": "^6.7.3",
     "eslint-config-google": "^0.14.0",
+    "mini-css-extract-plugin": "^2.7.2",
+    "postcss": "^8.4.20",
+    "postcss-loader": "^7.0.2",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
     "prettier-eslint-cli": "^7.1.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1"
   }
 }
