--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.1.3",
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
@@ -14,17 +12,9 @@
     "format": "prettier-eslint --write 'app/javascript/**/*.js'"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "css-loader": "^6.7.3",
     "eslint-config-google": "^0.14.0",
-    "mini-css-extract-plugin": "^2.7.2",
-    "postcss": "^8.4.20",
-    "postcss-loader": "^7.0.2",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
-    "prettier-eslint-cli": "^7.1.0",
-    "sass": "^1.57.1",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1"
+    "prettier-eslint-cli": "^7.1.0"
   }
 }
