--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
     "@hotwired/turbo-rails": "^7.1.3",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.3",
+    "sass": "^1.57.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "format": "prettier-eslint --write 'app/javascript/**/*.js'"
+    "format": "prettier-eslint --write 'app/javascript/**/*.js'",
+    "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   },
   "devDependencies": {
     "eslint-config-google": "^0.14.0",
