--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   },
   "devDependencies": {
+    "eslint": "^8.31.0",
     "eslint-config-google": "^0.14.0",
     "prettier": "^2.7.1",
     "prettier-eslint": "^15.0.1",
