--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "webpack --config webpack.config.js",
     "lint": "eslint --ext js app/javascript/**",
-    "format": "prettier-eslint --write 'app/javascript/**/*.js'",
+    "lint:fix": "eslint --fix --ext js app/javascript/**",
     "build:css": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules"
   },
   "devDependencies": {
