--- a/package.json
+++ b/package.json
@@ -19,10 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^8.31.0",
-    "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.6.0",
-    "prettier": "^2.8.2",
-    "prettier-eslint": "^15.0.1",
-    "prettier-eslint-cli": "^7.1.0"
+    "prettier": "^2.8.2"
   }
 }
