--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -35,7 +35,7 @@ jobs:
         run: bin/rails assets:precompile
       # Add or replace test runners here
       - name: Run tests
-        run: bin/rake
+        run: bin/rails test
       # Save Coverage
       - name: Save Coverage
         uses: actions/upload-artifact@v3
