--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       BUNDLE_PATH: "/app/vendor/bundle"
       BINDING: "0.0.0.0"
       RAILS_SERVE_STATIC_FILES: 1
+      RAILS_LOG_TO_STDOUT: 1
     command: ["bin/rails", "server"]
     expose: ["3000"]
     ports: ["3000:3000"]
