--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       BINDING: "0.0.0.0"
       RAILS_SERVE_STATIC_FILES: 1
       RAILS_LOG_TO_STDOUT: 1
-    command: ["bin/rails", "server"]
+    command: bash -c "rm -f tmp/pids/server.pid && bin/rails server -p 3000"
     expose: ["3000"]
     ports: ["3000:3000"]
     working_dir: /app
