--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -41,8 +41,9 @@ jobs:
       # Add or replace dependency steps here
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@v1
-        # with:
-        #   bundler-cache: true
+        with:
+          bundler-cache: true
+          cache-version: 1
       # Setup nodejs
       - name: Setup nodejs
         run: yarn install --frozen-lockfile
