--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -42,8 +42,7 @@ jobs:
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@v1
         with:
-          bundler-cache: true
-          cache-version: 1
+          bundler-cache: false
       # Setup nodejs
       - name: Setup nodejs
         run: yarn install --frozen-lockfile
