--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,7 @@ version: '3.9'
 
 services:
   web:
-    build:
-     context: .
-    secrets:
-      - master_key
+    build: .
     image: my_rails_template:0.0.1
     stdin_open: true
     tty: true
@@ -16,9 +13,7 @@ services:
     environment:
       BUNDLE_PATH: "/app/vendor/bundle"
       BINDING: "0.0.0.0"
-      RAILS_SERVE_STATIC_FILES: 1
-      RAILS_LOG_TO_STDOUT: 1
-    command: bash -c "rm -f tmp/pids/server.pid && bin/rails server -p 3000"
+    command: ["bin/rails", "server"]
     expose: ["3000"]
     ports: ["3000:3000"]
     working_dir: /app
