--- a/compose.yaml
+++ b/compose.yaml
@@ -7,8 +7,7 @@ services:
     command: bash -c "rm -f tmp/pids/server.pid && bin/rails server -p 3000 -b '0.0.0.0'"
     ports:
       - '3000:3000'
+    tty: true
+    stdin_open: true
     volumes:
-      - app-storage:/rails/storage
-
-volumes:
-  app-storage:
+      - .:/rails
