--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,6 +3,7 @@ FROM registry.docker.com/library/ruby:$RUBY_VERSION-slim
 
 ENV LANG C.UTF-8
 ENV TZ Asia/Tokyo
+ENV RAILS_LOG_TO_STDOUT true
 
 # Rails app lives here
 WORKDIR /rails
