--- a/compose.yaml
+++ b/compose.yaml
@@ -11,3 +11,18 @@ services:
     stdin_open: true
     volumes:
       - .:/rails
+    logging:
+      driver: fluentd
+      options:
+        fluentd-address: "localhost:24224"
+        fluentd-async-connect: "false"
+        tag: "rails_dev"
+
+  fluent:
+    image: fluent/fluent-bit
+    volumes:
+      - ./fluent-bit/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
+      - ./fluent-bit/parsers.conf:/fluent-bit/etc/parsers.conf
+      - ./log:/log:rw
+    ports:
+      - "24224:24224"
