system test用のseleniumを追加（Mx mac用）

--- a/compose.yaml
+++ b/compose.yaml
@@ -18,6 +18,9 @@ services:
         fluentd-async-connect: "false"
         tag: "rails_dev"
 
+  selenium:
+    image: seleniarm/standalone-chromium
+
   fluent:
     image: fluent/fluent-bit
     volumes:
