--- a/compose.yaml
+++ b/compose.yaml
@@ -10,7 +10,6 @@ services:
     tty: true
     stdin_open: true
     environment:
-      - SELENIUM_REMOTE_URL=http://selenium:4444/wd/hub
       - POSTGRES_USER=mypguser
       - POSTGRES_PASSWORD=mypgpassword
     volumes:
@@ -22,17 +21,13 @@ services:
     #     fluentd-async-connect: "false"
     #     tag: "rails_dev"
 
-  # Apple Sillicon使用のmac用のimageを使ったseleniumを指定
-  # selenium:
-  #   image: seleniarm/standalone-chromium
-
   db:
     image: postgres:15.6-alpine
     environment:
       - POSTGRES_USER=mypguser
       - POSTGRES_PASSWORD=mypgpassword
-    # volumes:
-    #   - postgres_volume:/var/lib/postgresql/data
+    volumes:
+      - postgres_volume:/var/lib/postgresql/data
 
   # fluent:
   #   image: fluent/fluent-bit
@@ -43,5 +38,5 @@ services:
   #   ports:
   #     - "24224:24224"
 
-# volulmes:
-#   postgres_volume:
+volulmes:
+  postgres_volume:
